# termite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  Termite.sln
Termite-C/: Internal.h  Main.c  Termite-C.vcxproj  Termite-C.vcxproj.filters  Termite.h
Termite-C/Control/: Memory.c  Thread.c
